test/scc/expr/semantic-errors/136.a
136.t:3:9: error: initializer element is not constant